--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "format": "prettier . --write ",
+    "test": "vitest",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -28,7 +29,8 @@
     "prettier": "3.5.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vitest": "^3.2.2"
   },
   "prettier": {
     "trailingComma": "es5",
